--- a/index.html
+++ b/index.html
@@ -158,14 +158,14 @@
       transition: background-size 0.3s, background-position 0.3s;
     }
     .profile-img {
-      margin-top: 44px;
       width: 340px;
-      max-width: 90vw;
+      max-width: 340px;
       border-radius: 8px;
       box-shadow: 0 4px 15px rgba(0,0,0,0.16);
       display: block;
       object-fit: cover;
       height: auto;
+      margin-top: 44px;
     }
     .hero-text-side {
       flex: 3;
@@ -514,16 +514,19 @@
         min-height: unset;
       }
       .hero-img-side {
-        min-height: 220px; /* Increase height for mobile */
-        height: 220px;
-        margin-top: 18px; /* Push image further down on mobile */
+        min-height: 240px !important;
+        height: 240px !important;
+        margin-top: 18px;
         align-items: flex-start;
+        display: flex;
+        justify-content: center;
+        background: #1e293b;
       }
       .profile-img {
-        margin-top: 24px;
-        width: 90vw;
-        max-width: 350px;
-        height: auto;
+        margin-top: 32px !important;
+        width: 90vw !important;
+        max-width: 350px !important;
+        height: auto !important;
         border-radius: 8px;
         box-shadow: 0 4px 15px rgba(0,0,0,0.16);
         display: block;
@@ -737,9 +740,7 @@
     hamburger.addEventListener('click', function () {
       hamburger.classList.toggle('active');
       mobileNav.classList.toggle('active');
-      // Accessibility for aria-expanded
       hamburger.setAttribute('aria-expanded', hamburger.classList.contains('active') ? 'true' : 'false');
-      // Prevent background scroll when menu open
       if (hamburger.classList.contains('active')) {
         document.body.style.overflow = 'hidden';
       } else {
