--- a/index.html
+++ b/index.html
@@ -425,70 +425,14 @@
       color: #94a3b8;
       background-color: #1e293b;
     }
+    /* Desktop: Increase profile image size */
     @media (min-width: 1025px) {
-      body, nav, .hero-desc, .card, .carousel-item, .get-in-touch, .get-in-touch p, .get-in-touch h2 {
-        font-size: 1.25rem;
-      }
-      nav h1 {
-        font-size: 1.7rem;
-      }
-      .hero-text-side h1 {
-        font-size: 2.5rem;
-      }
-      .education-section h2,
-      .research-section h2,
-      .get-in-touch h2 {
-        font-size: 2.3rem;
-      }
-      .card {
-        font-size: 1.25rem;
-        padding: 2.5rem 2.3rem;
-        max-width: 700px;
-        min-width: 350px;
-      }
-      .card h3,
-      .carousel-item h3 {
-        font-size: 1.45rem;
-      }
-      .card-date {
-        font-size: 1.2rem;
-      }
-      .carousel-item p,
-      .card ul li {
-        font-size: 1.22rem;
-      }
-      .hero-desc {
-        font-size: 1.2rem;
-        max-width: 850px;
-        line-height: 1.45;
-        margin-bottom: 1.1rem;
-        text-align: justify;
-        margin-left: 0;
-        margin-right: 0;
-      }
-      /* Enlarge only project 1 and 2 images on desktop */
-      .carousel-item:nth-child(1) img,
-      .carousel-item:nth-child(2) img {
-        max-width: 680px;
-      }
-      .hamburger {
-        display: none !important;
-      }
-      nav ul {
-        display: flex !important;
-      }
-      .mobile-nav {
-        display: none !important;
-      }
-      .hero-img-side {
-        align-items: flex-start;
-      }
       .profile-img {
-        margin-top: 44px;
-        width: 340px;
-        max-width: 340px;
-        height: auto;
+        width: 480px;
+        max-width: 480px;
+        margin-top: 54px;
       }
+      /* ... rest of your desktop overrides ... */
     }
     @media (max-width: 900px) {
       .hero-text-side {
