--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       background-color: #38bdf8;
       outline: none;
     }
+
     /* Hamburger menu button */
     .hamburger {
       display: none;
@@ -85,6 +86,7 @@
       border-radius: 2px;
       transition: 0.3s;
     }
+    /* Hamburger menu open animation */
     .hamburger.active span:nth-child(1) {
       transform: translateY(7px) rotate(45deg);
     }
@@ -94,6 +96,8 @@
     .hamburger.active span:nth-child(3) {
       transform: translateY(-7px) rotate(-45deg);
     }
+
+    /* Mobile menu overlay */
     .mobile-nav {
       display: none;
     }
@@ -140,9 +144,11 @@
       background: #38bdf8;
       color: #0f172a;
     }
+
     section {
       scroll-margin-top: 80px;
     }
+
     .hero-split {
       display: flex;
       min-height: 90vh;
@@ -150,22 +156,9 @@
     }
     .hero-img-side {
       flex: 2;
-      display: flex;
-      align-items: flex-start;
-      justify-content: center;
-      background: #1e293b;
+      background: url('your-profile-picture.jpg') center center/85% no-repeat;
       min-height: 400px;
       transition: background-size 0.3s, background-position 0.3s;
-    }
-    .profile-img {
-      width: 340px;
-      max-width: 340px;
-      border-radius: 8px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.16);
-      display: block;
-      object-fit: cover;
-      height: auto;
-      margin-top: 44px;
     }
     .hero-text-side {
       flex: 3;
@@ -396,6 +389,7 @@
       background: rgba(0, 0, 0, 0.8);
       outline: none;
     }
+
     .get-in-touch {
       padding: 3.2rem 1rem 2.2rem 1rem;
       background: #0f172a;
@@ -425,15 +419,66 @@
       color: #94a3b8;
       background-color: #1e293b;
     }
-    /* Desktop: Increase profile image size */
+
     @media (min-width: 1025px) {
-      .profile-img {
-        width: 480px;
-        max-width: 480px;
-        margin-top: 54px;
+      body, nav, .hero-desc, .card, .carousel-item, .get-in-touch, .get-in-touch p, .get-in-touch h2 {
+        font-size: 1.25rem;
       }
-      /* ... rest of your desktop overrides ... */
+      nav h1 {
+        font-size: 1.7rem;
+      }
+      .hero-text-side h1 {
+        font-size: 2.5rem;
+      }
+      .education-section h2,
+      .research-section h2,
+      .get-in-touch h2 {
+        font-size: 2.3rem;
+      }
+      .card {
+        font-size: 1.25rem;
+        padding: 2.5rem 2.3rem;
+        max-width: 700px;
+        min-width: 350px;
+      }
+      .card h3,
+      .carousel-item h3 {
+        font-size: 1.45rem;
+      }
+      .card-date {
+        font-size: 1.2rem;
+      }
+      .carousel-item p,
+      .card ul li {
+        font-size: 1.22rem;
+      }
+      .hero-desc {
+        font-size: 1.2rem;
+        max-width: 850px;
+        line-height: 1.45;
+        margin-bottom: 1.1rem;
+        text-align: justify;
+        margin-left: 0;
+        margin-right: 0;
+      }
+      /* Enlarge only project 1 and 2 images on desktop */
+      .carousel-item:nth-child(1) img,
+      .carousel-item:nth-child(2) img {
+        max-width: 680px;
+      }
+      /* Hide hamburger on desktop */
+      .hamburger {
+        display: none !important;
+      }
+      /* Desktop nav always visible */
+      nav ul {
+        display: flex !important;
+      }
+      .mobile-nav {
+        display: none !important;
+      }
     }
+
     @media (max-width: 900px) {
       .hero-text-side {
         padding: 2.7rem 1rem 2rem 1rem;
@@ -442,6 +487,7 @@
         max-width: 540px;
       }
     }
+
     @media (max-width: 600px) {
       nav {
         flex-direction: row;
@@ -458,23 +504,8 @@
         min-height: unset;
       }
       .hero-img-side {
-        min-height: 240px !important;
-        height: 240px !important;
-        margin-top: 18px;
-        align-items: flex-start;
-        display: flex;
-        justify-content: center;
-        background: #1e293b;
-      }
-      .profile-img {
-        margin-top: 32px !important;
-        width: 90vw !important;
-        max-width: 350px !important;
-        height: auto !important;
-        border-radius: 8px;
-        box-shadow: 0 4px 15px rgba(0,0,0,0.16);
-        display: block;
-        object-fit: cover;
+        min-height: 180px;
+        height: 180px;
       }
       .hero-text-side {
         align-items: center;
@@ -535,9 +566,7 @@
   </nav>
   <!-- Hero Split Section -->
   <section class="hero-split" id="home">
-    <div class="hero-img-side">
-      <img src="your-profile-picture.jpg" alt="Profile picture" class="profile-img" />
-    </div>
+    <div class="hero-img-side"></div>
     <div class="hero-text-side">
       <h1>Welcome to my personal website!</h1>
       <div class="hero-desc">
@@ -684,13 +713,16 @@
     hamburger.addEventListener('click', function () {
       hamburger.classList.toggle('active');
       mobileNav.classList.toggle('active');
+      // Accessibility for aria-expanded
       hamburger.setAttribute('aria-expanded', hamburger.classList.contains('active') ? 'true' : 'false');
+      // Prevent background scroll when menu open
       if (hamburger.classList.contains('active')) {
         document.body.style.overflow = 'hidden';
       } else {
         document.body.style.overflow = '';
       }
     });
+    // Close menu on link click (mobile only)
     document.querySelectorAll('.mobile-nav a').forEach(link => {
       link.addEventListener('click', function () {
         hamburger.classList.remove('active');
