--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
       background-color: #38bdf8;
       outline: none;
     }
-
     /* Hamburger menu button */
     .hamburger {
       display: none;
@@ -86,7 +85,6 @@
       border-radius: 2px;
       transition: 0.3s;
     }
-    /* Hamburger menu open animation */
     .hamburger.active span:nth-child(1) {
       transform: translateY(7px) rotate(45deg);
     }
@@ -96,8 +94,6 @@
     .hamburger.active span:nth-child(3) {
       transform: translateY(-7px) rotate(-45deg);
     }
-
-    /* Mobile menu overlay */
     .mobile-nav {
       display: none;
     }
@@ -144,11 +140,9 @@
       background: #38bdf8;
       color: #0f172a;
     }
-
     section {
       scroll-margin-top: 80px;
     }
-
     .hero-split {
       display: flex;
       min-height: 90vh;
@@ -156,9 +150,22 @@
     }
     .hero-img-side {
       flex: 2;
-      background: url('your-profile-picture.jpg') center center/85% no-repeat;
+      display: flex;
+      align-items: flex-start;
+      justify-content: center;
+      background: #1e293b;
       min-height: 400px;
       transition: background-size 0.3s, background-position 0.3s;
+    }
+    .profile-img {
+      width: 340px;
+      max-width: 340px;
+      border-radius: 8px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.16);
+      display: block;
+      object-fit: cover;
+      height: auto;
+      margin-top: 44px;
     }
     .hero-text-side {
       flex: 3;
@@ -389,7 +396,6 @@
       background: rgba(0, 0, 0, 0.8);
       outline: none;
     }
-
     .get-in-touch {
       padding: 3.2rem 1rem 2.2rem 1rem;
       background: #0f172a;
@@ -419,66 +425,15 @@
       color: #94a3b8;
       background-color: #1e293b;
     }
-
+    /* Desktop: Increase profile image size */
     @media (min-width: 1025px) {
-      body, nav, .hero-desc, .card, .carousel-item, .get-in-touch, .get-in-touch p, .get-in-touch h2 {
-        font-size: 1.25rem;
+      .profile-img {
+        width: 480px;
+        max-width: 480px;
+        margin-top: 54px;
       }
-      nav h1 {
-        font-size: 1.7rem;
-      }
-      .hero-text-side h1 {
-        font-size: 2.5rem;
-      }
-      .education-section h2,
-      .research-section h2,
-      .get-in-touch h2 {
-        font-size: 2.3rem;
-      }
-      .card {
-        font-size: 1.25rem;
-        padding: 2.5rem 2.3rem;
-        max-width: 700px;
-        min-width: 350px;
-      }
-      .card h3,
-      .carousel-item h3 {
-        font-size: 1.45rem;
-      }
-      .card-date {
-        font-size: 1.2rem;
-      }
-      .carousel-item p,
-      .card ul li {
-        font-size: 1.22rem;
-      }
-      .hero-desc {
-        font-size: 1.2rem;
-        max-width: 850px;
-        line-height: 1.45;
-        margin-bottom: 1.1rem;
-        text-align: justify;
-        margin-left: 0;
-        margin-right: 0;
-      }
-      /* Enlarge only project 1 and 2 images on desktop */
-      .carousel-item:nth-child(1) img,
-      .carousel-item:nth-child(2) img {
-        max-width: 680px;
-      }
-      /* Hide hamburger on desktop */
-      .hamburger {
-        display: none !important;
-      }
-      /* Desktop nav always visible */
-      nav ul {
-        display: flex !important;
-      }
-      .mobile-nav {
-        display: none !important;
-      }
+      /* ... rest of your desktop overrides ... */
     }
-
     @media (max-width: 900px) {
       .hero-text-side {
         padding: 2.7rem 1rem 2rem 1rem;
@@ -487,7 +442,6 @@
         max-width: 540px;
       }
     }
-
     @media (max-width: 600px) {
       nav {
         flex-direction: row;
@@ -504,8 +458,23 @@
         min-height: unset;
       }
       .hero-img-side {
-        min-height: 180px;
-        height: 180px;
+        min-height: 240px !important;
+        height: 240px !important;
+        margin-top: 32px !important; /* Adds margin before the profile photo */
+        align-items: flex-start;
+        display: flex;
+        justify-content: center;
+        background: #1e293b;
+      }
+      .profile-img {
+        margin-top: 16px !important; /* Slight margin between hero-img-side and image */
+        width: 90vw !important;
+        max-width: 350px !important;
+        height: auto !important;
+        border-radius: 8px;
+        box-shadow: 0 4px 15px rgba(0,0,0,0.16);
+        display: block;
+        object-fit: cover;
       }
       .hero-text-side {
         align-items: center;
@@ -566,7 +535,9 @@
   </nav>
   <!-- Hero Split Section -->
   <section class="hero-split" id="home">
-    <div class="hero-img-side"></div>
+    <div class="hero-img-side">
+      <img src="your-profile-picture.jpg" alt="Profile picture" class="profile-img" />
+    </div>
     <div class="hero-text-side">
       <h1>Welcome to my personal website!</h1>
       <div class="hero-desc">
@@ -713,16 +684,13 @@
     hamburger.addEventListener('click', function () {
       hamburger.classList.toggle('active');
       mobileNav.classList.toggle('active');
-      // Accessibility for aria-expanded
       hamburger.setAttribute('aria-expanded', hamburger.classList.contains('active') ? 'true' : 'false');
-      // Prevent background scroll when menu open
       if (hamburger.classList.contains('active')) {
         document.body.style.overflow = 'hidden';
       } else {
         document.body.style.overflow = '';
       }
     });
-    // Close menu on link click (mobile only)
     document.querySelectorAll('.mobile-nav a').forEach(link => {
       link.addEventListener('click', function () {
         hamburger.classList.remove('active');
