--- a/index.html
+++ b/index.html
@@ -460,14 +460,14 @@
       .hero-img-side {
         min-height: 240px !important;
         height: 240px !important;
-        margin-top: 32px !important; /* Adds margin before the profile photo */
+        margin-top: 18px;
         align-items: flex-start;
         display: flex;
         justify-content: center;
         background: #1e293b;
       }
       .profile-img {
-        margin-top: 16px !important; /* Slight margin between hero-img-side and image */
+        margin-top: 32px !important;
         width: 90vw !important;
         max-width: 350px !important;
         height: auto !important;
