--- a/index.html
+++ b/index.html
@@ -460,13 +460,14 @@
       .hero-img-side {
         min-height: 240px !important;
         height: 240px !important;
-        margin-top: 32px !important; /* Adds margin before the profile photo for small screens */
+        margin-top: 18px;
         align-items: flex-start;
         display: flex;
         justify-content: center;
         background: #1e293b;
       }
       .profile-img {
+        margin-top: 32px !important;
         width: 90vw !important;
         max-width: 350px !important;
         height: auto !important;
@@ -474,7 +475,6 @@
         box-shadow: 0 4px 15px rgba(0,0,0,0.16);
         display: block;
         object-fit: cover;
-        /* Do not set margin-top here, keep desktop untouched */
       }
       .hero-text-side {
         align-items: center;
