--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     html {
       box-sizing: border-box;
       scroll-behavior: smooth;
+      font-size: 22px; /* Increased base font size */
     }
     *, *:before, *:after {
       box-sizing: inherit;
@@ -20,10 +21,11 @@
       color: #f8f9fa;
       min-height: 100vh;
       overflow-x: hidden;
+      font-size: 1.1rem;
     }
     nav {
       background: #1e293b;
-      padding: 1.2rem 1rem;
+      padding: 2rem 2rem;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -32,45 +34,47 @@
       top: 0;
       z-index: 99;
       flex-wrap: wrap;
+      font-size: 1.3rem;
     }
     nav h1 {
       font-weight: 700;
-      font-size: 1.3rem;
+      font-size: 2.2rem;
       color: #38bdf8;
       margin: 0;
     }
     nav ul {
       list-style: none;
       display: flex;
-      gap: 1.1rem;
+      gap: 2rem;
       margin: 0;
       padding: 0;
+      font-size: 1.3rem;
     }
     nav ul li {
       font-weight: 600;
-      font-size: 1rem;
+      font-size: 1.25rem;
     }
     nav ul li a {
       text-decoration: none;
       color: #f8fafc;
       transition: color 0.3s, background-color 0.3s;
-      padding: 0.4rem 0.7rem;
-      border-radius: 5px;
+      padding: 0.8rem 1.2rem;
+      border-radius: 7px;
       display: block;
+      font-size: 1.3rem;
     }
     nav ul li a:hover, nav ul li a:focus {
       color: #0f172a;
       background-color: #38bdf8;
       outline: none;
     }
-    /* Hamburger menu button */
     .hamburger {
       display: none;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      width: 38px;
-      height: 38px;
+      width: 56px;
+      height: 56px;
       background: transparent;
       border: none;
       cursor: pointer;
@@ -78,21 +82,21 @@
     }
     .hamburger span {
       display: block;
-      width: 22px;
-      height: 3px;
-      margin: 4px 0;
+      width: 32px;
+      height: 5px;
+      margin: 6px 0;
       background: #000;
       border-radius: 2px;
       transition: 0.3s;
     }
     .hamburger.active span:nth-child(1) {
-      transform: translateY(7px) rotate(45deg);
+      transform: translateY(11px) rotate(45deg);
     }
     .hamburger.active span:nth-child(2) {
       opacity: 0;
     }
     .hamburger.active span:nth-child(3) {
-      transform: translateY(-7px) rotate(-45deg);
+      transform: translateY(-11px) rotate(-45deg);
     }
     .mobile-nav {
       display: none;
@@ -121,17 +125,17 @@
       margin: 0;
       display: flex;
       flex-direction: column;
-      gap: 2rem;
+      gap: 2.5rem;
       align-items: center;
     }
     .mobile-nav ul li a {
       color: #f8fafc;
-      font-size: 1.6rem;
+      font-size: 2.2rem;
       text-decoration: none;
       font-weight: 700;
       letter-spacing: 1px;
-      border-radius: 5px;
-      padding: 0.6rem 2.2rem;
+      border-radius: 7px;
+      padding: 1rem 3rem;
       transition: background 0.2s, color 0.2s;
       background: transparent;
     }
@@ -141,12 +145,13 @@
       color: #0f172a;
     }
     section {
-      scroll-margin-top: 80px;
+      scroll-margin-top: 120px;
     }
     .hero-split {
       display: flex;
-      min-height: 90vh;
+      min-height: 95vh;
       width: 100vw;
+      font-size: 1.4rem;
     }
     .hero-img-side {
       flex: 2;
@@ -154,18 +159,18 @@
       align-items: flex-start;
       justify-content: center;
       background: #1e293b;
-      min-height: 400px;
+      min-height: 480px;
       transition: background-size 0.3s, background-position 0.3s;
     }
     .profile-img {
-      width: 340px;
-      max-width: 340px;
-      border-radius: 8px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.16);
+      width: 450px;
+      max-width: 600px;
+      border-radius: 12px;
+      box-shadow: 0 4px 18px rgba(0,0,0,0.18);
       display: block;
       object-fit: cover;
       height: auto;
-      margin-top: 44px;
+      margin-top: 64px;
     }
     .hero-text-side {
       flex: 3;
@@ -174,27 +179,30 @@
       justify-content: center;
       align-items: flex-start;
       background: rgba(15,23,42,0.94);
-      padding: 4rem 3rem;
-      min-width: 320px;
+      padding: 6rem 4rem;
+      min-width: 440px;
       width: 100%;
+      font-size: 1.5rem;
     }
     .hero-text-side h1 {
-      font-size: 2.1rem;
+      font-size: 3.2rem;
       color: #fff;
       font-weight: 700;
-      margin-bottom: 0.8rem;
-      letter-spacing: 1px;
+      margin-bottom: 1.6rem;
+      letter-spacing: 1.2px;
       line-height: 1.2;
+      text-align: left;
+      width: 100%;
     }
     .hero-desc {
       color: #fff;
-      font-size: 1.04rem;
-      margin-bottom: 1.2rem;
-      line-height: 1.5;
-      max-width: 540px;
-      text-align: center;
-      margin-left: auto;
-      margin-right: auto;
+      font-size: 1.45rem;
+      margin-bottom: 2rem;
+      line-height: 1.8;
+      max-width: 800px;
+      text-align: justify;
+      margin-left: 0;
+      margin-right: 0;
     }
     .hero-desc a {
       color: #38bdf8;
@@ -206,28 +214,28 @@
     }
     .social-links {
       display: flex;
-      gap: 1rem;
-      margin-top: 1.5rem;
+      gap: 2.2rem;
+      margin-top: 2.5rem;
       flex-wrap: wrap;
     }
     .social-links a {
       display: flex;
       align-items: center;
       justify-content: center;
-      width: 42px;
-      height: 42px;
+      width: 65px;
+      height: 65px;
       background: #fff;
-      border-radius: 8px;
+      border-radius: 12px;
       box-shadow: 0 2px 10px rgba(30,41,59,0.13);
       transition: box-shadow 0.3s, transform 0.3s, background 0.2s;
-      border: 2px solid #e2e8f0;
+      border: 3px solid #e2e8f0;
       padding: 0;
     }
     .social-links a img {
-      width: 22px;
-      height: 22px;
+      width: 36px;
+      height: 36px;
       object-fit: contain;
-      border-radius: 4px;
+      border-radius: 6px;
       transition: transform 0.3s;
       background: transparent;
       padding: 0;
@@ -253,52 +261,44 @@
     .social-links a.twitter:hover, .social-links a.twitter:focus { background: #14171a; }
     .social-links a.gmail { border-color: #ea4335; }
     .social-links a.gmail:hover, .social-links a.gmail:focus { background: #ea4335; }
-
-    .education-section {
-      padding: 3rem 1rem 2rem 1rem;
-      background: linear-gradient(to right, #e0f2fe, #f8fafc);
-      color: #1e293b;
+    .education-section,
+    .research-section,
+    .get-in-touch {
+      font-size: 1.5rem;
+      padding: 4rem 2rem 3rem 2rem;
     }
-    .education-section h2 {
-      font-size: 2rem;
-      font-weight: 700;
-      margin-bottom: 2rem;
-      text-align: center;
-      color: #0f172a;
+    .education-section h2,
+    .research-section h2,
+    .get-in-touch h2 {
+      font-size: 2.7rem;
+      margin-bottom: 2.7rem;
     }
     .card-container {
       display: flex;
       flex-wrap: wrap;
-      gap: 1.7rem;
+      gap: 2.5rem;
       justify-content: center;
     }
     .card {
-      flex: 1 1 320px;
-      background: #ffffff;
-      border-radius: 12px;
-      padding: 2rem 2rem;
+      flex: 1 1 380px;
+      background: #fff;
+      border-radius: 16px;
+      padding: 3rem 3rem;
       color: #1e293b;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.07);
-      max-width: 600px;
-      min-width: 320px;
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
-      font-size: 1.1rem;
-    }
-    .card:hover, .card:focus-within {
-      transform: scale(1.03);
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.17);
-      outline: none;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.07);
+      max-width: 900px;
+      min-width: 380px;
+      font-size: 1.3rem;
     }
     .card h3 {
-      font-size: 1.17rem;
-      margin-bottom: 0.6rem;
-      color: #0f172a;
+      font-size: 1.7rem;
+      margin-bottom: 1rem;
     }
     .card-date {
-      font-size: 1rem;
+      font-size: 1.18rem;
       font-weight: bold;
       color: #475569;
-      margin-bottom: 0.8rem;
+      margin-bottom: 1.2rem;
     }
     .card ul {
       margin-top: 0.3rem;
@@ -306,9 +306,9 @@
       list-style: disc;
     }
     .card ul li {
-      margin-bottom: 0.6rem;
+      margin-bottom: 0.8rem;
       color: #64748b;
-      font-size: 0.97rem;
+      font-size: 1.09rem;
     }
     .edu-link {
       text-decoration: none;
@@ -321,16 +321,8 @@
       outline: none;
     }
     .research-section {
-      padding: 3rem 1rem 2rem 1rem;
       background: linear-gradient(to right, #f8fafc, #e0f2fe);
       color: #1e293b;
-    }
-    .research-section h2 {
-      font-size: 2rem;
-      font-weight: 700;
-      margin-bottom: 2rem;
-      color: #0f172a;
-      text-align: center;
     }
     .carousel {
       position: relative;
@@ -345,18 +337,18 @@
     .carousel-item {
       flex: 0 0 100%;
       max-width: 100%;
-      padding: 1rem 0.3rem;
+      padding: 2rem 1rem;
       text-align: center;
       box-sizing: border-box;
-      font-size: 1rem;
+      font-size: 1.2rem;
     }
     .carousel-item img {
       width: 100%;
-      max-width: 480px;
+      max-width: 600px;
       height: auto;
-      border-radius: 8px;
+      border-radius: 12px;
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.16);
-      margin: 0 auto 1rem;
+      margin: 0 auto 2rem;
       display: block;
     }
     .carousel-item .item-info {
@@ -364,12 +356,12 @@
       padding: 0 0.3rem;
     }
     .carousel-item h3 {
-      font-size: 1.09rem;
-      margin-bottom: 0.5rem;
+      font-size: 1.4rem;
+      margin-bottom: 1rem;
     }
     .carousel-item p {
-      font-size: 0.97rem;
-      line-height: 1.55;
+      font-size: 1.09rem;
+      line-height: 1.8;
       color: #475569;
     }
     .carousel-button {
@@ -380,9 +372,9 @@
       color: #f8f9fa;
       border: none;
       border-radius: 50%;
-      width: 36px;
-      height: 36px;
-      font-size: 1.6rem;
+      width: 50px;
+      height: 50px;
+      font-size: 2.2rem;
       cursor: pointer;
       z-index: 10;
       transition: background 0.2s;
@@ -399,7 +391,6 @@
       outline: none;
     }
     .get-in-touch {
-      padding: 3.2rem 1rem 2.2rem 1rem;
       background: #0f172a;
       margin-top: 2.2rem;
       text-align: center;
@@ -413,6 +404,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      padding: 4.5rem 2rem 3.5rem 2rem;
     }
     .get-in-touch > * {
       text-align: center;
@@ -421,93 +413,36 @@
     }
     footer {
       margin-top: 1.5rem;
-      padding: 1rem;
+      padding: 2rem;
       text-align: center;
-      font-size: 0.9rem;
+      font-size: 1.2rem;
       color: #94a3b8;
       background-color: #1e293b;
     }
-    /* Desktop: Increase profile image size */
-    @media (min-width: 1025px) {
-      .profile-img {
-        width: 480px;
-        max-width: 480px;
-        margin-top: 54px;
-      }
-      /* ... rest of your desktop overrides ... */
-    }
-    @media (max-width: 900px) {
-      .hero-text-side {
-        padding: 2.7rem 1rem 2rem 1rem;
-      }
-      .hero-desc {
-        max-width: 540px;
-      }
+    @media (max-width: 1024px) {
+      html { font-size: 17px; }
+      .hero-text-side { min-width: unset; padding: 2.5rem 1rem; }
+      .hero-split { flex-direction: column; }
+      .profile-img { width: 95vw; max-width: 370px; margin-top: 32px; }
+      .card, .carousel-item { padding: 1.5rem 0.5rem; }
+      .card { min-width: 80vw; }
     }
     @media (max-width: 600px) {
-      nav {
-        flex-direction: row;
-        align-items: center;
-      }
-      nav ul {
-        display: none;
-      }
-      .hamburger {
-        display: flex;
-      }
-      .hero-split {
-        flex-direction: column;
-        min-height: unset;
-      }
-      .hero-img-side {
-        min-height: 240px !important;
-        height: 240px !important;
-        margin-top: 18px;
-        align-items: flex-start;
-        display: flex;
-        justify-content: center;
-        background: #1e293b;
-      }
-      .profile-img {
-        margin-top: 32px !important;
-        width: 90vw !important;
-        max-width: 350px !important;
-        height: auto !important;
-        border-radius: 8px;
-        box-shadow: 0 4px 15px rgba(0,0,0,0.16);
-        display: block;
-        object-fit: cover;
-      }
-      .hero-text-side {
-        align-items: center;
-        padding: 1.25rem 0.2rem 1rem 0.2rem;
-        text-align: center;
-        min-width: unset;
-      }
-      .hero-text-side h1 {
-        font-size: 1.08rem;
-      }
-      .hero-desc {
-        font-size: 0.99rem;
-        max-width: 100vw;
-        text-align: center;
-        margin-left: auto;
-        margin-right: auto;
-      }
-      .card, .carousel-item {
-        padding: 0.7rem 0.1rem;
-      }
+      html { font-size: 15px; }
+      nav { padding: 1.2rem 0.6rem; }
+      nav ul { display: none; }
+      .hamburger { display: flex; }
+      .hero-text-side { padding: 1.25rem 0.2rem 1rem 0.2rem; }
+      .hero-text-side h1 { font-size: 1.3rem; }
+      .hero-desc { font-size: 1.1rem; }
+      .education-section h2, .research-section h2, .get-in-touch h2 { font-size: 1.5rem; }
+      .card, .carousel-item { padding: 0.7rem 0.1rem; }
+      .card { min-width: unset; }
       .carousel-button { width: 28px; height: 28px; font-size: 1.1rem; }
       .social-links { gap: 0.4rem; }
       .social-links a { width: 30px; height: 30px; }
       .social-links a img { width: 15px; height: 15px; }
-      .get-in-touch h2, .education-section h2, .research-section h2 {
-        font-size: 1.09rem;
-      }
-      .get-in-touch {
-        padding-left: 3vw;
-        padding-right: 3vw;
-      }
+      .get-in-touch { padding-left: 3vw; padding-right: 3vw; }
     }
   </style>
 </head>
@@ -711,7 +646,6 @@
     let currentIndex = 0;
 
     function updateCarousel() {
-      // Use offsetWidth for more robust width calculation
       const itemWidth = items[0].offsetWidth;
       track.style.transform = `translateX(-${currentIndex * itemWidth}px)`;
     }
