--- a/index.html
+++ b/index.html
@@ -139,53 +139,46 @@
     section {
       scroll-margin-top: 120px;
     }
-    .hero-split {
-      display: flex;
-      flex-direction: row;
-      align-items: stretch;
-      width: 100vw;
-      min-height: 90vh;
-    }
-    .hero-img-side {
-      flex: 2;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: #1e293b;
-      min-height: 600px;
-      padding: 0;
-    }
-    .profile-img {
-      width: 500px;
-      max-width: 95vw;
-      border-radius: 16px;
-      box-shadow: 0 4px 18px rgba(0,0,0,0.18);
-      display: block;
-      object-fit: cover;
-      height: auto;
-      margin: 40px 0;
-    }
-    .hero-text-side {
-      flex: 3;
+    /* --- HERO SECTION: No split, no color behind profile image --- */
+    .hero-section {
       display: flex;
       flex-direction: column;
-      justify-content: center;
-      align-items: flex-start;
-      background: rgba(15,23,42,0.94);
-      padding: 6rem 4rem;
-      min-width: 420px;
+      align-items: center;
+      justify-content: flex-start;
+      width: 100vw;
+      padding-top: 4rem;
+      padding-bottom: 4rem;
+      background: transparent;
+    }
+    .profile-img {
+      width: 340px;
+      max-width: 90vw;
+      border-radius: 16px;
+      box-shadow: 0 4px 18px rgba(0,0,0,0.18);
+      object-fit: cover;
+      height: auto;
+      margin-bottom: 2.5rem;
+      background: transparent;
+      display: block;
+    }
+    .hero-intro-text {
       width: 100%;
-      font-size: 1.5rem;
+      max-width: 800px;
+      background: transparent;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 0 2rem;
       box-sizing: border-box;
     }
-    .hero-text-side h1 {
+    .hero-intro-text h1 {
       font-size: 3.2rem;
       color: #fff;
       font-weight: 700;
       margin-bottom: 1.6rem;
       letter-spacing: 1.2px;
       line-height: 1.2;
-      text-align: left;
+      text-align: center;
       width: 100%;
     }
     .hero-desc {
@@ -193,7 +186,6 @@
       font-size: 1.45rem;
       margin-bottom: 2rem;
       line-height: 1.8;
-      max-width: 800px;
       width: 100%;
       text-align: justify;
       overflow-wrap: break-word;
@@ -202,12 +194,14 @@
       padding-left: 1.5rem;
       padding-right: 1.5rem;
       margin: 0 auto;
+      background: transparent;
     }
     .social-links {
       display: flex;
       gap: 2.2rem;
       margin-top: 2.5rem;
       flex-wrap: wrap;
+      justify-content: center;
     }
     .social-links a {
       display: flex;
@@ -252,6 +246,49 @@
     .social-links a.twitter:hover, .social-links a.twitter:focus { background: #14171a; }
     .social-links a.gmail { border-color: #ea4335; }
     .social-links a.gmail:hover, .social-links a.gmail:focus { background: #ea4335; }
+    /* Responsive */
+    @media (max-width: 900px) {
+      .hero-section {
+        padding-top: 2.5rem;
+        padding-bottom: 2.5rem;
+      }
+      .profile-img {
+        width: 95vw;
+        max-width: 340px;
+      }
+      .hero-intro-text {
+        padding: 0 1rem;
+      }
+      .hero-intro-text h1 {
+        font-size: 2rem;
+      }
+      .hero-desc {
+        font-size: 1.1rem;
+        padding-left: 1rem;
+        padding-right: 1rem;
+      }
+    }
+    @media (max-width: 600px) {
+      .hero-section {
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+      }
+      .profile-img {
+        width: 98vw;
+        max-width: 95vw;
+      }
+      .hero-intro-text {
+        padding: 0 0.5rem;
+      }
+      .hero-intro-text h1 {
+        font-size: 1.3rem;
+      }
+      .hero-desc {
+        font-size: 1rem;
+        padding-left: 0.5rem;
+        padding-right: 0.5rem;
+      }
+    }
     .education-section,
     .research-section,
     .get-in-touch {
@@ -410,59 +447,6 @@
       color: #94a3b8;
       background-color: #1e293b;
     }
-    @media (max-width: 900px) {
-      .hero-split {
-        flex-direction: column;
-        min-height: unset;
-      }
-      .hero-img-side {
-        min-height: 220px;
-        padding: 1rem 0 0 0;
-      }
-      .profile-img {
-        width: 96vw;
-        max-width: 340px;
-        margin: 24px 0 0 0;
-      }
-      .hero-text-side {
-        min-width: unset;
-        max-width: 100vw;
-        width: 100vw;
-        box-sizing: border-box;
-        padding: 2rem 1rem 2rem 1rem;
-        align-items: center;
-      }
-      .hero-text-side h1 {
-        font-size: 1.5rem;
-        text-align: center;
-      }
-      .hero-desc {
-        font-size: 1rem;
-        max-width: 100vw;
-        width: 100vw;
-        text-align: justify;
-        box-sizing: border-box;
-        overflow-wrap: break-word;
-        word-break: break-word;
-        padding-left: 1rem;
-        padding-right: 1rem;
-        margin: 0 auto;
-      }
-    }
-    @media (max-width: 600px) {
-      .hero-text-side {
-        padding: 1.25rem 0.5rem 1rem 0.5rem;
-      }
-      .hero-desc {
-        font-size: 1rem;
-        padding-left: 0.5rem;
-        padding-right: 0.5rem;
-        max-width: 100vw;
-        width: 100vw;
-        text-align: justify;
-        margin: 0 auto;
-      }
-    }
   </style>
 </head>
 <body>
@@ -489,12 +473,10 @@
       <li><a href="#get-in-touch">Get in Touch</a></li>
     </ul>
   </nav>
-  <!-- Hero Split Section -->
-  <section class="hero-split" id="home">
-    <div class="hero-img-side">
-      <img src="your-profile-picture.jpg" alt="Profile picture" class="profile-img" />
-    </div>
-    <div class="hero-text-side">
+  <!-- Hero Section: NO split, NO background color behind image -->
+  <section class="hero-section" id="home">
+    <img src="your-profile-picture.jpg" alt="Profile picture" class="profile-img" />
+    <div class="hero-intro-text">
       <h1>Welcome to my personal website!</h1>
       <div class="hero-desc">
         I'm Arupam Biswas, a passionate neuroscience researcher driven by curiosity about how the central nervous system heals and adapts. My journey began in India and led me to Germany, where I am pursuing a PhD at
