--- a/index.html
+++ b/index.html
@@ -515,17 +515,17 @@
       </div>
     </div>
     <div class="hero-text-side">
-      <h1>Welcome to my personal website!</h1>
+      <h1>Greetings Everyone!!</h1>
       <div class="hero-desc">
-        I'm Arupam Biswas, a passionate neuroscience researcher driven by curiosity about how the central nervous system heals and adapts. My journey began in India and led me to Germany, where I am pursuing a PhD at
+        I'm Arupam Biswas, a Neuroscience Researcher fueled by a deep curiosity about how the central nervous system heals, adapts, and thrives. My journey began in India and led me to Germany, where I am pursuing a PhD at
         <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
-          Institute of Developmental Biology and Neurobiology (iDN)
+          Institute of Developmental Biology and Neurobiology(iDN)
         </a>. My work focuses on developing biomaterials for neural regeneration, in collaboration with the
         <a href="https://lir-mainz.de/en/lir" target="_blank">
-          Leibniz Institute for Resilience Research (LIR)
+          Leibniz Institute for Resilience Research(LIR)
         </a> and the
         <a href="https://www.mpip-mainz.mpg.de/en/home" target="_blank">
-          Max Planck Institute for Polymer Research (MPI-P)
+          Max Planck Institute for Polymer Research(MPI-P)
         </a>, Germany.
         <br><br>
         Outside of the lab, I love exploring new cuisines, traveling to discover different cultures, and sharing ideas with fellow scientists and enthusiasts. Collaboration and open-mindedness are key to driving innovation in science and beyond.
