--- a/index.html
+++ b/index.html
@@ -519,14 +519,16 @@
       <div class="hero-desc">
         I'm Arupam Biswas, a Neuroscience Researcher fueled by a deep curiosity about how the central nervous system heals, adapts, and thrives. My journey began in India and led me to Germany, where I am pursuing a PhD at
         <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
-          Institute of Developmental Biology and Neurobiology(iDN)
-        </a>. My work focuses on developing biomaterials for neural regeneration, in collaboration with the
+          Institute of Developmental Biology and Neurobiology(iDN).
+        </a>
+        <br><br>
+        My work focuses on developing models and tools for next-generation therapies using precision-engineered artificial biomaterials to support central nervous system regeneration after traumatic injury or in conditions like multiple sclerosis. This research is carried out in collaboration with the
         <a href="https://lir-mainz.de/en/lir" target="_blank">
           Leibniz Institute for Resilience Research(LIR)
         </a> and the
         <a href="https://www.mpip-mainz.mpg.de/en/home" target="_blank">
-          Max Planck Institute for Polymer Research(MPI-P)
-        </a>, Germany.
+          Max Planck Institute for Polymer Research(MPI-P),
+        </a> Germany.
         <br><br>
         Outside of the lab, I love exploring new cuisines, traveling to discover different cultures, and sharing ideas with fellow scientists and enthusiasts. Collaboration and open-mindedness are key to driving innovation in science and beyond.
         <br><br>
