--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
           Institute of Developmental Biology and Neurobiology(iDN).
         </a>
         <br><br>
-        My work focuses on developing models and tools for next-generation therapies using precision-engineered artificial biomaterials to support central nervous system regeneration after traumatic injury or in conditions like multiple sclerosis. This research is carried out in collaboration with the
+        My work focuses on developing models and tools for next-generation therapies using precision-engineered artificial biomaterials to support central nervous system regeneration after Traumatic Brain injury(TBI)/Spinal Cord Injury(SCI) or in conditions like Multiple Sclerosis(MS). This research is carried out in collaboration with the
         <a href="https://lir-mainz.de/en/lir" target="_blank">
           Leibniz Institute for Resilience Research(LIR)
         </a> and the
@@ -594,7 +594,7 @@
           <div class="item-info">
             <h3>PhD Topic: Interactive Biomaterials for Neural Regeneration (InteReg)</h3>
             <p>
-              The
+              Traumatic CNS injuries and diseases like MS lead to lasting disability due to poor regenerative capacity. Barriers include glial scarring, inhibitory debris, lack of axonal guidance, and inefficient remyelination. In MS, immune attacks damage myelin, and remyelination declines with disease progression and age. While immune-targeting therapies exist, effective regeneration treatments are still lacking. The
               <a href="https://intereg.uni-mainz.de/" target="_blank" style="text-decoration: none; color: inherit;">
                 Interactive Biomaterials for Neural Regeneration (InteReg)
               </a> project is a five-year collaboration between Johannes Gutenberg University Mainz, the Max Planck Institute for Polymer Research, and the Leibniz Institute for Resilience Research, aiming to develop precision biomaterials for treating neurological diseases. InteReg focuses on creating programmable materials that guide central nervous system cell regeneration following injuries or in conditions like multiple sclerosis and traumatic injuries (SCI, TBI).
